--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,7 +2,13 @@ name: Python CI
 
 on:
   push:
+    branches:
+      - main
+    paths:
+      - '**/*.py'
   pull_request:
+    paths:
+      - '**/*.py'
 
 jobs:
   python-ci:
