fix: Workflows were not staged

--- a/.github/workflows/release-docker-images.yml
+++ b/.github/workflows/release-docker-images.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-push-dockerimage:
     name: Buld and push dockerimage
-    if: github.repository_owner == 'andrewthetechie'
+    if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
