--- a/.github/workflows/release-major-version-tag.yml
+++ b/.github/workflows/release-major-version-tag.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   update-majorver:
     name: Update Major Version Tag
-    if: github.repository_owner == 'andrewthetechie'
+    if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
       - uses: nowactions/update-majorver@v1
