--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -5,7 +5,7 @@ on:
 name: release-please
 jobs:
   release-please:
-    if: github.repository_owner == 'andrewthetechie'
+    if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
       - uses: google-github-actions/release-please-action@v3
