--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ on:
         type: boolean
 jobs:
   update-dockerfile:
-    if: github.repository_owner == 'andrewthetechie'
+    if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
