--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ typing-extensions = "^4.12.0"
 actions-toolkit = "^0.1.15"
 pygithub = "^2.3.0"
 pyyaml = "^6.0"
+pydantic-extra-types = "^2.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
