--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -86,8 +86,8 @@ branch_protections:
         strict: true
         # The list of status checks to require in order to merge into this branch
         checks:
-          - Lint
-          - Integration Testing
+          - Python CI
+          - Action Integration Testing
           - Generate Docs
       # Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
       enforce_admins: false
