--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -10,8 +10,8 @@ jobs:
     name: Action Integration Testing
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-        name: Checkout
+      - name: Checkout
+        uses: actions/checkout@v4.1.6        
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Update action.yml to use dockerfile
