--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.6        
+        uses: actions/checkout@v4.1.6
+        with:
+          ref: ${{ github.ref}}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Update action.yml to use dockerfile
