--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -29,7 +29,7 @@ jobs:
         uses: ./
         with:
           token: ${{ secrets.THIS_PAT || github.token }}
-          action: "apply"
+          action: "check"
       - name: Check outputs
         run: |
           test "${{ steps.test-action.outputs.result }}" == "Check passed"
