--- a/.github/workflows/generate-docs.yml
+++ b/.github/workflows/generate-docs.yml
@@ -1,7 +1,18 @@
 name: Generate Docs
 on:
   push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/generate-docs.yml'
+      - 'action.yml'
+      - 'README.md'
   pull_request:
+    paths:
+      - '.github/workflows/generate-docs.yml'
+      - 'action.yml'
+      - 'README.md'
+
 jobs:
   docs:
     name: Generate Docs
