--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "gha-repo-manager"
 version = "1.8.0"
 description = "Manage your Github repo(s) settings and secrets using Github Actions and a yaml file"
-authors = ["Andrew Herrington <andrew.the.techie@gmail.com>"]
+authors = ["Actuary Sailor <24359398+actuarysailor@users.noreply.github.com>"]
 license = "MIT"
 readme = "README.md"
 packages = [{include = "repo_manager"}]
