--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.6
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          ref: ${{ github.event.pull_request.head.sha || github.ref }}
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Update action.yml to use dockerfile
