--- a/.github/workflows/release-major-version-tag.yml
+++ b/.github/workflows/release-major-version-tag.yml
@@ -13,3 +13,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: nowactions/update-majorver@v1
+        with:
+          token: ${{ secrets.THIS_PAT }}
