--- a/.github/workflows/release-major-version-tag.yml
+++ b/.github/workflows/release-major-version-tag.yml
@@ -5,6 +5,11 @@ on:
   push:
     tags:
       - "v*"
+  push:
+    branches:
+      - main
+    paths:
+      - '.github/workflows/release-major-version-tag.yml'
 
 jobs:
   update-majorver:
