--- a/.github/workflows/release-major-version-tag.yml
+++ b/.github/workflows/release-major-version-tag.yml
@@ -5,7 +5,6 @@ on:
   push:
     tags:
       - "v*"
-  push:
     branches:
       - main
     paths:
@@ -19,4 +18,4 @@ jobs:
     steps:
       - uses: nowactions/update-majorver@v1
         with:
-          token: ${{ secrets.THIS_PAT }}
+          github_token: ${{ secrets.THIS_PAT }}
