--- a/.github/workflows/release-docker-images.yml
+++ b/.github/workflows/release-docker-images.yml
@@ -4,11 +4,6 @@ name: Release Docker Images
 on:
   release:
     types: [released]
-  push:
-    branches:
-      - main
-    paths:
-      - '.github/workflows/release-docker-images.yml'
 
 jobs:
   build-and-push-dockerimage:
@@ -16,11 +11,7 @@ jobs:
     if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.6
-        with:
-          token: ${{ secrets.THIS_PAT }}
-
+      - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -51,7 +42,7 @@ jobs:
             type=sha,format=long,prefix=
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v5.3.0
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: Dockerfile
@@ -62,4 +53,3 @@ jobs:
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/cache.md#registry-cache
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          github-token: ${{ secrets.THIS_PAT }}
