--- a/.github/workflows/release-docker-images.yml
+++ b/.github/workflows/release-docker-images.yml
@@ -10,6 +10,9 @@ on:
     paths:
       - '.github/workflows/release-docker-images.yml'
 
+permissions:
+  packages: write
+
 jobs:
   build-and-push-dockerimage:
     name: Buld and push dockerimage
@@ -23,19 +26,23 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3.2.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3.2.0
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.THIS_PAT }}
+
       - name: Docker metadata
         uses: docker/metadata-action@v4
         id: meta
@@ -49,6 +56,7 @@ jobs:
             type=sha,prefix=
             # full length sha
             type=sha,format=long,prefix=
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v5.3.0
