--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,9 +8,7 @@ jobs:
     if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
-      - uses: googleapis/release-please-action@v4.1.1
+      - uses: google-github-actions/release-please-action@v4.1.1
         with:
           token: ${{ secrets.THIS_PAT }}
-          release-type: python
-          extra-files: |
-            action.yml
+          manifest-file: .github/.release-please-manifest.json
