--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,6 +11,4 @@ jobs:
       - uses: google-github-actions/release-please-action@v4.1.1
         with:
           token: ${{ secrets.THIS_PAT }}
-          release-type: python
-          extra-files: |
-            action.yml
+          manifest-file: .github/.release-please-manifest.json
