--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,1 +1,10 @@
-
+{
+  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+  "release-type": "python",
+  "tag-separator": "@",
+  "include-v-in-tag": true,
+  "packages": {
+  },
+  "plugins": [
+  ]
+}
