--- a/.github/.release-please-manifest.json
+++ b/.github/.release-please-manifest.json
@@ -107,7 +107,7 @@
   // expect to find the release within the last N releases. For repositories with
   // a large number of individual packages, you may want to consider raising this
   // value, but it will increase the number of API calls used.
-  "release-search-depth": 400,
+  // "release-search-depth": 400,
 
   // When fetching the list of commits to consider, only consider the last N commits.
   // This option limits paginating through every commit in history when we may not
