--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: google-github-actions/release-please-action@v4.1.1
         with:
           token: ${{ secrets.THIS_PAT }}
-          manifest: .github/.release-please-manifest.json
+          manifest-file: .github/.release-please-manifest.json
