--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ actions-toolkit = "^0.1.15"
 pygithub = "^2.3.0"
 pyyaml = "^6.0"
 pydantic-extra-types = "^2.7.0"
+gitpython = "^3.1.43"
 
 
 [tool.poetry.group.dev.dependencies]
