--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,15 +1,24 @@
 {
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
-  "release-type": "python",
   "bootstrap-sha": "70fff24cb35636af4f8d0501cb3600e9e2739363",
   "release-search-depth": 400,
-  "extra-files": [
-    "action.yml"
-  ],
-  "tag-separator": "@",
-  "include-v-in-tag": true,
   "packages": {
-    ".": {}
+    ".": {
+      "pull-request-title-pattern": "chore(${branch}): Release ${version} of ${component} with scope ${scope}",
+      "tag-separator": "@",
+      "include-v-in-tag": true,
+      "changelog-path": "CHANGELOG.md",
+      "release-type": "python",
+      "bump-minor-pre-major": false,
+      "bump-patch-for-minor-pre-major": false,
+      "draft": false,
+      "prerelease": false,
+      "exclude-paths": [".github"],
+      "include-component-in-tag": false,
+      "extra-files": [
+        "action.yml"
+      ]
+  }
   },
   "plugins": []
 }
