--- a/release-please-config.json
+++ b/release-please-config.json
@@ -2,10 +2,10 @@
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
   "bootstrap-sha": "70fff24cb35636af4f8d0501cb3600e9e2739363",
   "release-search-depth": 400,
-  "pull-request-title-pattern": "chore{scope}: release {component} v{version}",
+  "pull-request-title-pattern": "chore${scope}: release ${component} v${version}",
   "packages": {
     ".": {
-      "pull-request-title-pattern": "chore{scope}: release v{version}",
+      "pull-request-title-pattern": "chore${scope}: release v${version}",
       "tag-separator": "@",
       "include-v-in-tag": true,
       "changelog-path": "CHANGELOG.md",
