--- a/release-please-config.json
+++ b/release-please-config.json
@@ -17,9 +17,7 @@
       "prerelease": false,
       "exclude-paths": [".github"],
       "include-component-in-tag": false,
-      "extra-files": [
-        "action.yml"
-      ]
+      "extra-files": ["action.yml"]
   }
   },
   "plugins": []
