Revert "feat!: Fix JSON Dump, Required Review Boundaries, and improve documentation (#43)" (#44)
This reverts commit bbeb1c940645ae5dbe84d6a26868ab030f8851d1.

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -2,14 +2,15 @@ on:
   push:
     branches:
       - main
-
 name: release-please
 jobs:
   release-please:
     if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
-      - uses: googleapis/release-please-action@v4.1.1
+      - uses: google-github-actions/release-please-action@v3
         with:
           token: ${{ secrets.THIS_PAT }}
-          manifest-file: .github/.release-please-manifest.json
+          release-type: python
+          extra-files: |
+            action.yml
