--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/checkout@v4.1.6
 
       - name: Set up Python ${{ matrix.python }}
-        uses: actions/setup-python@v5.1.0
+        uses: actions/setup-python@v4.5.0
         with:
           python-version: ${{ matrix.python }}
 
@@ -87,7 +87,7 @@ jobs:
             fh.write(f"result={result}\n")
 
       - name: Restore pre-commit cache
-        uses: actions/cache@v4.0.2
+        uses: actions/cache@v3.3.1
         if: matrix.session == 'pre-commit'
         with:
           path: ~/.cache/pre-commit
@@ -101,7 +101,7 @@ jobs:
 
       - name: Upload coverage data
         if: always() && matrix.session == 'tests'
-        uses: actions/upload-artifact@v4.3.3
+        uses: "actions/upload-artifact@v3.1.2"
         with:
           name: coverage-data
           path: ".coverage.*"
@@ -118,13 +118,12 @@ jobs:
     needs: python-ci
     steps:
       - name: Download coverage data
-        uses: actions/download-artifact@v4.1.7
+        uses: actions/download-artifact@v3.0.2
         with:
           name: coverage-data
 
       - name: Upload coverage report
-        uses: codecov/codecov-action@v4.4.1
+        uses: codecov/codecov-action@v3.1.0
         with:
-          token: ${{ secrets.THIS_PAT }}
           files: .coverage.xml
           verbose: true
