--- a/.github/workflows/action-integration.yml
+++ b/.github/workflows/action-integration.yml
@@ -26,15 +26,19 @@ jobs:
         uses: actions/checkout@v4.1.6
         with:
           ref: ${{ github.event.pull_request.head.sha || github.ref }}
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3.3.0
+
       - name: Update action.yml to use dockerfile
         uses: rmeneely/update-yaml@v1
         with:
           infile: action.yml
           varlist: "runs.image=Dockerfile"
+
       - name: cat action.yml
         run: cat action.yml
+
       - name: Test action
         id: test-action
         # test with the local checkout of the action
@@ -42,6 +46,9 @@ jobs:
         with:
           token: ${{ secrets.THIS_PAT || github.token }}
           action: "check"
+        env:
+          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+
       - name: Check outputs
         run: |
           test "${{ steps.test-action.outputs.result }}" == "Check passed"
