--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -2,15 +2,14 @@ on:
   push:
     branches:
       - main
+
 name: release-please
 jobs:
   release-please:
     if: github.repository_owner == 'actuarysailor'
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: googleapis/release-please-action@v4.1.1
         with:
           token: ${{ secrets.THIS_PAT }}
-          release-type: python
-          extra-files: |
-            action.yml
+          manifest-file: .github/.release-please-manifest.json
