--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pygithub = "^2.3.0"
 pyyaml = "^6.0"
 pydantic-extra-types = "^2.7.0"
 gitpython = "^3.1.43"
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
