--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pyyaml = "^6.0"
 pydantic-extra-types = "^2.7.0"
 gitpython = "^3.1.43"
 pandas = "^2.2.2"
+tabulate = "^0.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
