--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -122,8 +122,21 @@ jobs:
         with:
           name: coverage-data
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v3.1.6
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          files: .coverage.xml
-          verbose: true
+          filename: ./**/.coverage.xml
+          badge: true
+          fail_below_min: true
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: console
+          thresholds: '60 80'
+
+      # - name: Upload coverage report
+      #   uses: codecov/codecov-action@v3.1.6
+      #   with:
+      #     files: .coverage.xml
+      #     verbose: true
