--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -39,6 +39,7 @@ jobs:
       NOXSESSION: ${{ matrix.session }}
       FORCE_COLOR: "1"
       PRE_COMMIT_COLOR: "always"
+      GIThUB_SERVER_URl: ${{ github.server_url }}
       INPUT_TOKEN: ${{ secrets.THIS_PAT }}
 
     steps:
