--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -39,6 +39,8 @@ jobs:
       NOXSESSION: ${{ matrix.session }}
       FORCE_COLOR: "1"
       PRE_COMMIT_COLOR: "always"
+      GITHUB_SERVER_URL: ${{ github.server_url }}
+      INPUT_TOKEN: ${{ secrets.THIS_PAT }}
 
     steps:
       - name: Check out the repository
@@ -122,9 +124,21 @@ jobs:
         with:
           name: coverage-data
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4.4.1
+      - name: Code Coverage Report
+        uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          token: ${{ secrets.THIS_PAT }}
-          files: .coverage.xml
-          verbose: true
+          filename: ./**/.coverage.xml
+          badge: true
+          fail_below_min: false
+          format: markdown
+          hide_branch_rate: false
+          hide_complexity: true
+          indicators: true
+          output: console
+          thresholds: '60 80'
+
+      # - name: Upload coverage report
+      #   uses: codecov/codecov-action@v3.1.6
+      #   with:
+      #     files: .coverage.xml
+      #     verbose: true
