--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,9 @@ inputs:
   token:
     description: What github token to use with this action.
     required: true
+  fail_on_diff:
+    description: Fail the action if the repo settings differ from the settings file. Default is false. Note, this only applies if the action is set to 'check'
+    default: False
 outputs:
   result:
     description: "Result of the action"
