--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: true
   fail_on_diff:
     description: Fail the action if the repo settings differ from the settings file. Default is false. Note, this only applies if the action is set to 'check'
-    default: True
+    default: False
 outputs:
   result:
     description: "Result of the action"
