chore(main): release v2.0.6 (#57)
* chore(main): release v2.0.6

* Update main.py

* Update main.py

* Update main.py

* Update main.py

* Update main.py

* Update main.py

* Update main.py

* fix: Allow repo settings to differ

* docs: automated doc update

* ci: Fix default input values

* docs: automated doc update

* fix: Default for github server url

* docs: automated doc update

* fix: Test fail switch

* ci: Test true

* docs: automated doc update

* ci: Stil with default no fail on diff

* docs: automated doc update

---------

Co-authored-by: actuarysailor <actuarysailor@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,9 @@ inputs:
   token:
     description: What github token to use with this action.
     required: true
+  fail_on_diff:
+    description: Fail the action if the repo settings differ from the settings file. Default is false. Note, this only applies if the action is set to 'check'
+    default: False
 outputs:
   result:
     description: "Result of the action"
@@ -24,7 +27,7 @@ outputs:
     description: "Diff of this action, dumped to a json string"
 runs:
   using: "docker"
-  image: "docker://ghcr.io/actuarysailor/gha-repo-manager:v2.0.5" # x-release-please-version
+  image: "docker://ghcr.io/actuarysailor/gha-repo-manager:v2.0.6" # x-release-please-version
 branding:
   icon: "settings"
   color: "blue"
