--- a/examples/settings-clear.yml
+++ b/examples/settings-clear.yml
@@ -1,186 +1,62 @@
-# settings.yml can live in two places:
-# 1. in the repo itself
-# 2. in a centralized repo
-
-# The Action is able to apply settings to any repo that its token can manage
-# You can run Action from each repo, acting on that repo's settings.yml, or
-# from a central repo, using a single settings.yml to control many repos.
-
-# For users, it is the login id
-# For teams, it is the slug id
-# permission can be 'push','pull','triage','admin','maintain', or any custom role you have defined
-# for either users or teams, set exists to false to remove their permissions
 collaborators:
   - name: andrewthetechie
     type: user
     permission: pull
     exists: false
 
-# Which method you choose is up to you. See README.md for more info and example
-# Workflows to implement these strategies.
 settings:
-  # See https://docs.github.com/en/rest/reference/repos#update-a-repository for all available settings.
-  # any of these settings can be ommitted to just leave the repo's current setting
-  # If a setting has a value in settings.yml, it will always overwrite what exists in the repo.
-
-  # A short description of the repository that will show up on GitHub. Set to an empty string to clear.
   description: This repo is for testing github actions against without messing up a real repo
-
-  # A URL with more information about the repository. Set to an empty string to clear.
   homepage: ''
-
-  # A list of strings to apply as topics on the repo. Set to an empty string to clear topics. Omit or set to null to leave what repo already has
-  topics:
-    - ''
-
-  # Either `true` to make the repository private, or `false` to make it public.
+  topics: ''
   private: true
-
-  # Either `true` to enable issues for this repository, `false` to disable them.
   has_issues: false
-
-  # Either `true` to enable projects for this repository, or `false` to disable them.
-  # If projects are disabled for the organization, passing `true` will cause an API error.
   has_projects: false
-
-  # Either `true` to enable the wiki for this repository, `false` to disable it.
   has_wiki: false
-
-  # Either `true` to enable downloads for this repository, `false` to disable them.
   has_downloads: false
-
-  # Set the default branch for this repository.
   default_branch: main
-
-  # Either `true` to allow squash-merging pull requests, or `false` to prevent
-  # squash-merging.
   allow_squash_merge: true
-
-  # Either `true` to allow merging pull requests with a merge commit, or `false`
-  # to prevent merging pull requests with merge commits.
   allow_merge_commit: true
-
-  # Either `true` to allow rebase-merging pull requests, or `false` to prevent
-  # rebase-merging.
   allow_rebase_merge: true
-
-  # Either `true` to enable automatic deletion of branches on merge, or `false` to disable
   delete_branch_on_merge: true
-
-  # Either `true` to enable automated security fixes, or `false` to disable
-  # automated security fixes.
   enable_automated_security_fixes: true
-
-  # Either `true` to enable vulnerability alerts, or `false` to disable
-  # vulnerability alerts.
   enable_vulnerability_alerts: true
 
-# Labels: define labels for Issues and Pull Requests
 labels:
 
   - name: first-timers-only
-    # Provide a new name to rename an existing label. A rename that results in a 'not found' will not fail a run
     new_name: Help Wanted
 
-  - name: Old Label
-    # set exists: false to delete a label. A delete that results in a "not found" will not fail a run
+  - name: Fake Label
     exists: false
 
 branch_protections:
-  # branch protection can only be created for branches that exist.
   - name: main
-    # https://docs.github.com/en/rest/reference/repos#update-branch-protection
-    # Branch Protection settings. Leave a value out to leave set at current repo settings
     protection:
-      # Set exists to false to delete branch protection
       exists: false
-      # Require at least one approving review on a pull request, before merging. Set to null to disable.
-      pr_options:
-        # The number of approvals required. (1-6)
-        required_approving_review_count: 1
-        # Dismiss approved reviews automatically when a new commit is pushed.
-        dismiss_stale_reviews: true
-        # Blocks merge until code owners have reviewed.
-        require_code_owner_reviews: true
-        # Specify which users and teams can dismiss pull request reviews. Pass an empty dismissal_restrictions object to disable. User and team dismissal_restrictions are only available for organization-owned repositories. Omit this parameter for personal repositories.
-        # dismissal_restrictions:
-        #   users: []
-        #   teams: []
-      # Require status checks to pass before merging. Set to null to disable
-      # required_status_checks:
-      #   # Require branches to be up to date before merging.
-      #   strict: true
-      #   # The list of status checks to require in order to merge into this branch
-      # checks:
-      #   - lint
-      #   - test
-      #   - docker
-      # Blocks merge until all conversations on a pull request have been resolved
-      # require_conversation_resolution: true
-      # Enforce all configured restrictions for administrators. Set to true to enforce required status checks for repository administrators. Set to null to disable.
-      enforce_admins: true
-      # Prevent merge commits from being pushed to matching branches
-      require_linear_history: true
-      # Permit force pushes for all users with push access.
-      allow_force_pushes: true
-      # Allow users with push access to delete matching branches.
-      allow_deletions: true
-      # If set to true, the restrictions branch protection settings which limits who can push will also block pushes which create new branches, unless the push is initiated by a user, team, or app which has the ability to push. Set to true to restrict new branch creation.
-      block_creations: true
-      # Restrict who can push to this branch. Team and user restrictions are only available for organization-owned repositories. Set to null to disable.
-      restrictions:
-        users: []
-        teams: []
 
-# For users, it is the login id
-# For teams, it is the slug id
-# permission can be 'push','pull','triage','admin','maintain', or any custom role you have defined
-# set exists to false to remove an environment
+
 environments:
   - name: production
     exists: false
-    # same rules for secrets within the environment that are used for repo level secrets
     secrets:
       - key: PRODUCTION_SECRET
-        env: SOME_SECRET
         type: environments/production
         exists: false
-    # same rules for variables within the environment that are used for repo level variables
     variables:
       - key: PROD_VARIABLE
-        value: sample value
+        type: environments/production
         exists: false
-    # wait_timer can be set for a deployment environment, but it can not be cleared with this tool
-    # you will need to manually clear it if you want to remove it after setting it
-    # wait_timer: 30
 
 secrets:
-  # Manage secrets in your repo. Useful to manage secrets from a central repo for non organizations or to manage secrets org wide
   - key: SECRET_KEY
-    # pull the value from an environment variable. If this variable is not found in the env, throw an error and fail the run
-    # Set env vars on the github action job from secrets in your repo to sync screts across repos
-    env: SOME_SECRET
     exists: false
-    # Set a dependabot secret on the repo
   - key: SECRET_KEY
-    env: SOME_SECRET
-    type: dependabot
     exists: false
   - key: ANOTHER_SECRET
-    # set a value directly in your yaml, probably not a good idea for things that are actually a secret
-    value: bar
     exists: false
   - key: THIRD_SECRET
-    # pull the value from an environment variable
-    env: THIRD_VALUE
-    # setting a value as not required allows you to not pass in an env var. if THIRD_VALUE is not set in the env, this secret won't be set but no error will be thrown
-    required: false
     exists: false
 
 variables:
-  # Largely the same as secrets, except it can actually check the values to see if there is a difference
-  # Secrets get applied / updated evertime this action runs because it cannot determine if the value changed
   - key: VARIABLE1
-    value: change
-    # set to false in order to remove a variable
     exists: false
