--- a/examples/settings.yml
+++ b/examples/settings.yml
@@ -24,7 +24,7 @@ settings:
   # If a setting has a value in settings.yml, it will always overwrite what exists in the repo.
 
   # A short description of the repository that will show up on GitHub. Set to an empty string to clear.
-  description: This repo is for testing github actions against without messing up a real repo
+  description: Some Vague Description to Test updating of repo description
 
   # A URL with more information about the repository. Set to an empty string to clear.
   homepage: 'https://github.com'
@@ -82,7 +82,7 @@ labels:
     # Provide a new name to rename an existing label. A rename that results in a 'not found' will not fail a run
     new_name: first-timers-only
 
-  - name: Old Label
+  - name: Fake Label
     # set exists: false to delete a label. A delete that results in a "not found" will not fail a run
     exists: true
 
@@ -148,6 +148,7 @@ environments:
     # same rules for variables within the environment that are used for repo level variables
     variables:
       - key: PROD_VARIABLE
+        type: environments/production
         value: sample value
     # wait_timer can be set for a deployment environment, but it can not be cleared with this tool
     # you will need to manually clear it if you want to remove it after setting it
