--- a/examples/settings-clear.yml
+++ b/examples/settings-clear.yml
@@ -6,8 +6,8 @@ collaborators:
 
 settings:
   description: This repo is for testing github actions against without messing up a real repo
-  homepage: ''
-  topics: ''
+  homepage: ""
+  topics: ""
   private: true
   has_issues: false
   has_projects: false
@@ -22,7 +22,6 @@ settings:
   enable_vulnerability_alerts: true
 
 labels:
-
   - name: first-timers-only
     new_name: Help Wanted
 
@@ -33,7 +32,6 @@ branch_protections:
   - name: main
     protection:
       exists: false
-
 
 environments:
   - name: production
