--- a/examples/settings.yml
+++ b/examples/settings.yml
@@ -27,7 +27,7 @@ settings:
   description: Some Vague Description to Test updating of repo description
 
   # A URL with more information about the repository. Set to an empty string to clear.
-  homepage: 'https://github.com'
+  homepage: "https://github.com"
 
   # A list of strings to apply as topics on the repo. Set to an empty string to clear topics. Omit or set to null to leave what repo already has
   topics:
@@ -77,7 +77,6 @@ settings:
 
 # Labels: define labels for Issues and Pull Requests
 labels:
-
   - name: Help Wanted
     # Provide a new name to rename an existing label. A rename that results in a 'not found' will not fail a run
     new_name: first-timers-only
@@ -170,7 +169,7 @@ secrets:
   - key: SECRET_KEY
     # pull the value from an environment variable. If this variable is not found in the env, throw an error and fail the run
     # Set env vars on the github action job from secrets in your repo to sync screts across repos
-    env: SOME_SECRET 
+    env: SOME_SECRET
     # Set a dependabot secret on the repo
   - key: SECRET_KEY
     env: SOME_SECRET
