fix: Skip files on clear

--- a/examples/settings-clear.yml
+++ b/examples/settings-clear.yml
@@ -60,7 +60,7 @@ variables:
 
 batch_file_operations:
   - target_branch: main
-    skip: false
+    skip: true
     files:
       - src_file: remote://README.md
         dest_file: README.rst
